src/main/java/antlr/test/fail/undeclared_var_1.go
package main

func main() {
    var tst = 12
}
func foo() {
    var tst = 12
    var a = tst
    b = a
}
